# git-gui

./: .gitignore  README.md  create-icon.ps1  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml  test.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep  README.md  icon.icns
src-tauri/src/: config.rs  error.rs  main.rs  state.rs  terminal.rs
src-tauri/src/commands/: branch.rs  commit.rs  compare.rs  conflict.rs  diff.rs  github.rs  mod.rs  remote.rs  repo.rs  stash.rs  submodule.rs  terminal.rs  worktree.rs
src-tauri/src/git/: branch.rs  commit.rs  compare.rs  conflict.rs  diff.rs  github.rs  mod.rs  rebase.rs  remote.rs  repository.rs  stash.rs  status.rs  submodule.rs  worktree.rs
src/components/features/: BlameViewer.tsx  BranchManager.tsx  CodeEditor.tsx  CommandPalette.tsx  CommitGraph.tsx  CommitHistory.tsx  CompareView.tsx  ConflictResolver.tsx  DiffViewer.tsx  FileHistoryDialog.tsx  InteractiveRebase.tsx  IssuesManager.tsx  PullRequestManager.tsx  RemoteManager.tsx  Settings.tsx  SideBySideDiff.tsx  StashPanel.tsx  SubmoduleManager.tsx  Terminal.tsx  UpdateDialog.tsx  WelcomeScreen.tsx  WorkingArea.tsx  (+1 more)
src/hooks/: useGit.ts  useKeyboardShortcuts.ts  useUpdateChecker.ts
src/lib/: error.ts  navigation.ts  platform.ts
src/services/: git.ts
src/stores/: diffViewerStore.ts  layoutStore.ts  repoStore.ts  settingsStore.ts  terminalStore.ts  themeStore.ts
src/tests/: setup.ts
src/types/: index.ts
(+18 files in other folders)
